Function trocar de contraste

--- a/css/style.css
+++ b/css/style.css
@@ -7,130 +7,136 @@ Autor : Orivelton Cesar - www.orivelton.com.br
 body {
    font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
 }
+/*START - Barra de Acessibilidade*/
+.row {
+  width: 100%;
+  overflow: hidden;
+}
 
-/*Start Header*/
-header, .box-1, .box-2, footer {
-  width: 1000px;
+.container {
+  width: 1024px;
   margin: auto;
   overflow: hidden;
-  padding: 2% 0;
+  display: block;
 }
 
-header h1 {
-  font-size: 1em;
-}
-
-header h2 {
-  font-size: 0.8em;
-  padding: 0 1%;
-}
-
-.go-content {
-  font-size: 0.7em;
-}
-
-.container-left {
+nav ul li {
   float: left;
-  width: 30%;
+  list-style: none;
+  padding: 0.5% 1%;
+  border-right: 1px solid #FFFFFF;
 }
 
-.container-right {
-  float: right;
-  width: 70%;
+.acessibilidade nav ul li:last-child {
+  border-right: none;
+}
+
+
+nav ul li a {
+  color: #FFFFFF;
+  text-decoration: none;
+  font-size: 0.8em;
+}
+
+nav ul li a:hover {
+  text-decoration: underline;;
+}
+
+.acessibilidade nav ul li a:after {
+  display: inline-block;
+  content: "  ⬤";
+  font-size: 1em;
+  margin-left: 0.6em;
+}
+
+.acessibilidade nav ul li:nth-child(1) a:after,
+.acessibilidade nav ul li:nth-child(2) a:after,
+.acessibilidade nav ul li:nth-child(3) a:after {
+  content: "▼";
+}
+
+.acessibilidade nav ul li:nth-child(3) a:after {
+  color: #FFFFFF;
+}
+
+.acessibilidade nav ul li:nth-child(4) a:after {
+  display: none;
+}
+
+.acessibilidade nav ul li:nth-child(5) a:after {
+  color: #092747;
+}
+
+.bottom-border {
+  border-bottom: 1px solid #FFFFFF;
+}
+/*END - Barra de Acessibilidade*/
+/*START - Menu*/
+header h1 {
+  width: 25%;
+  color: #FFFFFF;
+  padding: 0.2em 0;
 }
 
 header nav {
-  width: 100%
+  width: 75%;
 }
 
-  header nav ul li {
-    float: left;
-    list-style: none;
-    padding: 0.5% 1%;
-    font-size: 0.9em;
-  }
-
-    header nav ul li a {
-      text-decoration: none;
-    }
-
-      header nav ul li a i {
-        width: 13px;
-        height: 13px;
-        border-radius:  50%;
-        border: 1px solid #696969;
-        display: inline-block;
-      }
-.bd-right {
-  border-right: 1px solid #d5d5d5;
+header nav ul {
+  display: flex;
 }
 
-/*End Header*/
-/*Start Content*/
-.container p{
-  padding: 0.5% 1%;
+header nav ul li{
+  padding: 1em;
+  border-right: 0;
+}
+/*END - Menu*/
+
+
+
+
+
+/*START - background CORES (Defalt)*/
+.bck-green {
+  background: #6c9283;
 }
 
-.container .box-1 {
-  background: #f2f2f2;
+.bck-black {
+  background: #444643;
 }
+/*END - background CORES (Defalt)*/
 
-.container .box-2 {
-  background: #4bc1dd;
-  color: #FFFFFF;
-}
-/*End Content*/
-/*Start Footer*/
-footer {
-  text-align: center;
-}
-/*End Footer*/
 
-/*Start Contraste Branco*/
-body#contrasteBranco,
-#contrasteBranco .box-1,
-#contrasteBranco .box-2,
-.branco{
+/*START - Contraste Branco*/
+#contrasteBranco .bck-green {
   background: #FFFFFF;
 }
 
-#contrasteBranco .box-1 p,
-#contrasteBranco a,
-#contrasteBranco h1,
-#contrasteBranco h2,
-#contrasteBranco .box-2,
-#contrasteBranco footer {
+#contrasteBranco nav ul li a,
+#contrasteBranco h1 {
   color: #000000;
 }
-/*End Contraste Branco*/
 
-/*Start Contraste Preto*/
-body#contrastePreto,
-#contrastePreto .box-1,
-#contrastePreto .box-2,
-.preto{
-  background: #000000;
+#contrasteBranco .bottom-border,
+#contrasteBranco  nav ul li {
+  border-color: #000000;
 }
 
-#contrastePreto .box-1 p,
-#contrastePreto a,
-#contrastePreto h1,
-#contrastePreto h2,
-#contrastePreto footer,
-#contrasteAzul .box-1 p,
-#contrasteAzul a,
-#contrasteAzul h1,
-#contrasteAzul h2,
-#contrasteAzul footer {
-  color: #FFFFFF;
-}
-/*End Contraste Preto*/
+/*END - Contraste Branco*/
 
-/*Start Contraste Azul*/
-body#contrasteAzul,
-#contrasteAzul .box-1,
-#contrasteAzul .box-2,
-.azul{
-  background: #3590c7;
+
+
+
+
+/*START - Utilidades Globais*/
+.fr {
+  float: right;
 }
-/*End Contraste Azul*/
+
+.fl {
+  float: left;
+}
+/*END - Utilidades Globais*/
+
+/*START - */
+/*END - */
