--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ nav ul li a.contraste-active {
 .row-top {
   background: #64c4e8;
   color: #FFFFFF;
-  margin-top: 3.9%;
+  margin-top: 47px;
 }
 
 .row-top .container {
@@ -68,11 +68,17 @@ nav ul li a.contraste-active {
   text-align: center;
 }
 
-.row-banner img {
+.row-banner .avatar {
   border: 5px solid #fff;
   border-radius: 50%;
   padding: 0.5%;
   margin-top: 2%;
+}
+
+.oculos {
+  position: absolute;
+  top: 49%;
+  left: 40.7%;
 }
 
 .row-banner h1 {
@@ -147,7 +153,7 @@ footer {
   background: #000000;
 }
 
-#contrasteBranco .row-banner img {
+#contrasteBranco .row-banner .avatar {
   border: 5px solid #000;
 }
 /*END - Contraste Branco*/
@@ -177,7 +183,7 @@ footer {
   background: #FFFFFF;
 }
 
-#contrastePreto .row-banner img {
+#contrastePreto .row-banner .avatar {
   border: 5px solid #FFFFFF;
 }
 /*END - Contraste Preto*/
@@ -207,7 +213,7 @@ footer {
   background: #FFFFFF;
 }
 
-#contrasteAzul .row-banner img {
+#contrasteAzul .row-banner .avatar {
   border: 5px solid #FFFFFF;
 }
 /*END - Contraste azul*/
